apps/base/immich/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
  name: immich
