apps/base/immich/resources/peerauthentication.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: immich
spec:
  mtls:
    mode: STRICT
